welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:42: error: not enough arguments for method slash: (c: java.awt.Color, v: java.awt.Color)Unit.
Unspecified value parameter v.
		slash(Color.yellow)
                     ^